manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playk8s-deployment
  labels:
    app: playk8s-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playk8s-app
  template:
    metadata:
      labels:
        app: playk8s-app
    spec:
      containers:
      - name: playk8s-container
        image: gcr.io/lastrust-stg/playk8s:0.2
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: playk8s-volume
            mountPath: /app/templates
          - name: secret-volume
            mountPath: /app/secret
      volumes:
      - name: playk8s-volume
        persistentVolumeClaim:
          claimName: pv-slow-claim
      - name: secret-volume
        secret:
          secretName: playk8s-secret
          items:
          - key: prikey
            path: prikey.txt
      terminationGracePeriodSeconds: 0
