manifests/service-sub.yml
apiVersion: v1
kind: Service
metadata:
  name: playk8s-sub-service
  labels:
    app: playk8s-sub
spec:
  selector:
    app: playk8s-sub
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
